--- a/SpringBootSample/src/main/resources/templates/hello.html
+++ b/SpringBootSample/src/main/resources/templates/hello.html
@@ -10,5 +10,12 @@
 		入力:<input type = "text" name="text1">
 		<input type ="submit" value="クリック">
 	</form>
+	<br/> 
+	<form method ="post" action ="/hello/db"> 
+		従業員 ID:
+		<input type ="text" name =" text 2" th: value ="${text 2_value}" /> 
+		<input type ="submit" value =" クリック" />
+	</form >
+
 </body>
 </html>
